# COSMOS_USRP

./: .bash_history  .gitconfig  .gitignore  .gr_fftw_wisdom  .python_history  eth_config.sh  prepare.sh
.gnuradio/: grc.conf
.ssh/: id_ed25519  id_ed25519.pub
.vim/: .netrwhist
Ctrl_PAAM_py/paam_actions/: config.py  connect.py  steer.py
Ctrl_PAAM_py/paam_packages/object/: __init__.py
Ctrl_Table_py/xytable_actions/: video.py
GNU/examples/: example_paam_tone_sb1.grc  example_paam_tone_sb2.grc
GNU/indoor/: single_tone_Brian.grc  single_tone_Brian.py
ederenv/: README.txt  ederserver.py  install_mb1.sh  start_mb0.sh  start_mb0_b.sh  start_mb1.sh  start_mb1_b.sh
ederenv/Eder_A/: agc.py  amux.py  background.py  bf.py  bf_awv.py  bf_idx.py  eder.py  eder_logger.py  ederserver.py  get_IP_address.py  pll.py  ref.py  rx.py  rx_bbdc.py  rx_dco.py  spi.py  test.py  tx.py  txCalibration.py  tx_dco.py  vco.py
ederenv/Eder_B/: adc.py  alc.py  amux.py  bf.py  bf_awv.py  eder.py  eder_status.py  ederserver.py  ederspi.py  gpio.py  memory.py  pll.py  ref.py  register.py  rx.py  rx_bbdc.py  rx_dco.py  rx_iq_meas.py  temp.py  test.py  trx_soft_sw.py  tx.py  tx_dco.py  tx_dco_pdet.py  vco.py
ederenv/matlab/: eder.info  getTemp.py  regsDump.py  setMultipleTxCh.py
paam_ctrl/paam_actions/: cleanup.py  config.py  connect.py  disconnect.py  enable.py  status.py  steer.py
table/: video.py
table/utils/: __init__.py
table_ctrl/xytable_actions/: check.py  move.py  status.py
table_ctrl/xytable_packages/: __init__.py
uhd/host/Brian/: CMakeLists.txt  configuration_rx.sh
(+330 files in other folders)
